--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -29,6 +29,9 @@
         position: absolute;
         left: -30px;
     }
+    h1, h2, h4{
+        padding-top: .6em;
+    }
     blockquote {
         //border: 1px solid black;
         border-left: 5px solid #333333;
